More small cleanups